--- a/style1(son).css
+++ b/style1(son).css
@@ -1,8 +1,8 @@
 .maincont{
     display:flex;
-    width: 45%;
+    max-width: 50%;;
     min-width: 400px;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     background-color: white;
     
 }
@@ -40,36 +40,30 @@ h1{
     text-align: center;
 }
 .desc{
-    font-family: Roboto;
     font-style: normal;
     font-size: 12px;
-    line-height:19px;
+    /* line-height:19px; */
     list-style: none;
-    text-decoration: none;
-    margin-left:-20px;
-    padding:0; 
-    padding-left: 30px;
+    /* text-decoration: none; */
+    margin:0px;
+    padding:0px; 
     text-align:left;
-    width: 200px  ;
-    margin-right:10px;
+    width:100%;
+    /* margin-right:10px; */
 }
-h4{
-    font-family: Roboto;
+h2 a{
     font-style: normal;
     font-weight: bold;
-    font-size: 12px;
     line-height: 19px;
     color: #833AE0;
-    margin-left:0px; 
-    padding-left:15px;
+    text-decoration: none;
 }
 .price{
-font-family: Roboto;
 font-style: normal;
 font-weight: bold;
 font-size: 16px;
 color: #000000;
-padding-top: 20px;
+padding:0px;
 }
 .price p{
     margin: 0;
