--- a/style1(son).css
+++ b/style1(son).css
@@ -1,26 +1,30 @@
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .maincont{
     display:flex;
-    max-width: 50%;;
-    min-width: 400px;
+    max-width: 50%;
+    min-width: 300px;
     /* justify-content: space-around; */
     background-color: white;
     
 }
 h1{
-    font-family: Roboto,sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 35px;
-    line-height: 50px;
-    margin-left:20px;
-    padding-left:250px;
+    font-weight:lighter;
+    font-size: 43px;
+    line-height:50px;
+    margin:39px 40px;
+    padding: 0;
 }
 .coin{
     position: relative;
-    margin-right:15px ;
+    /* margin-right:15px ;
     width: 172px;
     height: 172px;
-    
+     */
+     margin:0px;
+     padding:0px;
 }
 .coin span{
     left: 105px;
@@ -54,9 +58,10 @@ h1{
 h2 a{
     font-style: normal;
     font-weight: bold;
-    line-height: 19px;
+    /* line-height:24px; */
     color: #833AE0;
     text-decoration: none;
+    font-size: 15px;
 }
 .price{
 font-style: normal;
@@ -64,6 +69,10 @@ font-weight: bold;
 font-size: 16px;
 color: #000000;
 padding:0px;
+width: 136px;
+height: 120px;
+margin-top:17px;
+
 }
 .price p{
     margin: 0;
@@ -75,39 +84,40 @@ padding:0px;
 .mainclass{
    display: flex;
    flex-wrap:wrap;
-   justify-content: space-between;
-   width: 80%;
+   justify-content:flex-start;
+   max-width:1280px;;
    margin: auto;
-   min-width: 1100px;
+   min-width:800px;
 }
 .main{
     display:flex;
-    width: 80%;
+    min-width: 600px;
+    max-width: 920px ;
     justify-content: center;
+    margin: auto;
 }
 .coinpict{ 
     position: relative;
     padding-top:0; 
+    width: 50%;
 }
  
 .coinpict1 img{
-    width:330px;
-    height:360px;
-    padding:-10px;
+    min-width: 50% ;
+    max-width: 100%;
 }
 .coinpict2 img{
-    width:330x;
-    height:360px;
-    padding:-20px;   
+    min-width: 50% ;
+    max-width: 100%;  
 }
 
 .descrip {
-    width: 455px;
-    background-color: E1E1E1;
+    width: 50%;
+    background-color: #E1E1E1;
     font-family:Roboto;
     font-style: normal;
     font-size: 12px;
-    line-height:180%;
+    line-height:130%;
     margin-left: 0px;
     margin-top: 50px;
     padding-right: 44px;
@@ -130,12 +140,30 @@ table tr:nth-child(2n+1){
     color: black;
     font-weight: bold;
     font-size: 18px;
+    padding-right:20px;
 }
 .pricea{
     color: gray;
     font-size: 10px;
+    
 }
 .linktomain{
    padding-top:40px;
 
+}
+.mainimg{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 172px;
+    height: 172px;
+}
+.divclass{
+    padding:0;
+    width: 224px;
+    margin:0 0 0 18px;
+}
+h2{
+    font-size: 23px;
+    font:bold;
 }
