--- a/style1(son).css
+++ b/style1(son).css
@@ -8,6 +8,7 @@ body {
     min-width: 300px;
     /* justify-content: space-around; */
     background-color: white;
+    margin: auto;
     
 }
 h1{
@@ -61,7 +62,7 @@ h2 a{
     /* line-height:24px; */
     color: #833AE0;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 16px;
 }
 .price{
 font-style: normal;
@@ -78,7 +79,7 @@ margin-top:17px;
     margin: 0;
 }
 .price span{
-    color: gray;
+    color:#CCC6C6;
     font-size: 12px;  
 }
 .mainclass{
@@ -127,11 +128,13 @@ margin-top:17px;
 }
 .descrip span{
     color: gray;
-    font-size: 12px;
+    font-size:10px;
 }
 table{
     font-size:10px;
-    margin-bottom: 50px;
+    margin-bottom:120px;
+    
+    
 }
 table tr:nth-child(2n+1){
     background-color:white;
@@ -144,12 +147,11 @@ table tr:nth-child(2n+1){
 }
 .pricea{
     color: gray;
-    font-size: 10px;
-    
+    font-size:10px;  
 }
 .linktomain{
    padding-top:40px;
-
+   
 }
 .mainimg{
     display: flex;
@@ -164,6 +166,6 @@ table tr:nth-child(2n+1){
     margin:0 0 0 18px;
 }
 h2{
-    font-size: 23px;
+    font-size:18px;
     font:bold;
 }
